# jacobi-svd-cuda-opt

./: .gitignore  CMakeLists.txt  STRUCTURE.md  bench.sh  install.sh  pyproject.toml
docs/: bench.md  extract.md
docs/perf/: baseline-performance-analysis-20260515.md  fused-kernel-performance-analysis-20260515.md  thread-pool-concurrency-analysis-20260515.md
include/jacobi/svd/application/: pipeline.cuh  pipeline.hpp
include/jacobi/svd/domain/: cuda_error.hpp  device_matrix.cuh  jacobi_svd.cuh  jacobi_svd.hpp  jacobi_svd_config.cuh  jacobi_svd_config.hpp  jacobi_svd_result.hpp  kernels.cuh  kernels.hpp  layout_transpose.hpp
include/jacobi/svd/io/: files.cuh  files.hpp  io.cuh  io.hpp  mat_dispatch.cuh  mat_dispatch.hpp  mat_file.cuh  mat_file.hpp  mat_metadata.cuh  matrix.hpp  matrix_stream.cuh  matrix_stream.hpp  pinned_host_task_buffer.cuh  txt_file.cuh  txt_file.hpp
psrc/extractor/: __init__.py  common.py  constants.py  logs.py  main.py  ncu.py  nsys.py  runner.py  summary.py  timing.py
psrc/generator/: common.py  generate_mat.py  generate_txt.py  main.py
scripts/bench/: core.sh  instances.sh  runners.sh
scripts/instances/: baseline_profile.sh  fused_profile.sh  fused_thread_pool.sh  fused_timing.sh  profile.sh  sample.sh  timing.sh
src/: CMakeLists.txt
src/application/: kernel_stage.cuh  kernel_stage.hpp  output_stage.cuh  output_stage.hpp  pipeline.cu  pipeline_detail.cuh  pipeline_detail.hpp  pipeline_helpers.cu  result_writer.cuh  result_writer.hpp  text_testcase_source.cuh  text_testcase_source.hpp  thread_pool.cuh
src/domain/: cuda_check.cuh  cuda_error.cu  device_buffer.cuh  device_matrix.cu  jacobi_rotation_kernels.cuh  jacobi_schedule.cuh  jacobi_svd.cu  jacobi_svd_detail.cuh  jacobi_svd_detail.hpp  layout_transpose_autotune.cu  layout_transpose_kernels.cuh  matrix_index.cuh
src/infrastructure/: append_mapped_output_file.cuh  append_mapped_output_file.hpp  files.cu  io_detail.cuh  io_detail.hpp  mat_dispatch_reader.cu  mat_file.cu  memory_mapped_input_file.cuh  memory_mapped_input_file.hpp  pinned_host_task_buffer.cu  txt_file.cu
src/interfaces/: arg_parser.cuh  arg_parser.hpp  cli.cuh  cli.hpp  cli_actions.cuh  cli_actions.hpp  cli_parser.cu  cli_support.cu  cli_types.cuh  cli_types.hpp  main.cu
tests/: CMakeLists.txt  cli_parser_tests.cu
tex/sections/: 01-what-is-svd.tex  02-one-sided-jacobi-svd.tex  03-gpu-parallel-reduction.tex  04-system-boundary-pure-kernel.tex  05-memory-mapped-streaming.tex  06-pipeline-producer-consumer.tex
